<resources>
    <string name="app_name">Helping salespeople</string>

    <!-- Tab titles -->
    <string name="title_search">Search</string>
    <string name="title_create">New customer</string>
    <string name="title_edit">Edit a profile</string>

    <!-- Search -->
    <string name="search_text_name">Name:</string>
    <string name="search_text_age">Age:</string>
    <string name="search_text_sex">Sex:</string>
    <string name="search_text_suggestion">Item suggestion:</string>
    <string name="search_customer">Search a customer!</string>
    <string name="search_text_last_purchase">Last purchase:</string>
    <string name="search_text_last_purchase_total">Total</string>
    <string name="search_text_last_purchase_date">Date</string>
    <string name="search_text_last_purchase_not_exist">This customer never bought with us.</string>

    <!-- Create -->
    <string name="create_text_name">Name</string>
    <string name="create_text_birthday">Birthday</string>
    <string name="create_text_sex">Sex</string>
    <string name="create_text_cpf">CPF</string>
    <string name="create_new_customer">Send info to create!</string>

    <!-- Edit -->
    <string name="edit_text_name">Name</string>
    <string name="edit_text_birthday">Birthday</string>
    <string name="edit_text_sex">Sex</string>
    <string name="edit_text_cpf">CPF</string>
    <string name="edit_new_customer">Send info to edit!</string>

    <!-- Generic use -->
    <string name="take_picture">Take a picture!</string>
</resources>
